--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1">
-        <title>Odita, Inc.</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ODita, Inc.</title>
         <link rel="icon" type="images/x-icon" href="image/logo.png" />
        
         <!-- Meta SEO -->
@@ -26,23 +26,32 @@
                     <li class="list_item"><a href="#contactus" class="li_nav">Contact Us</a></li>
                 </ul>
             </nav>
+            <button id="hamburger-menu">
+                <nav id="sidebar-menu">
+                    <ul> 
+                        <li><a href="#">Who We Are</a></li>
+                        <li><a href="#">What We Do</a></li>
+                        <li><a href="#">Our Performance</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </button>    
         </header>
         <main>
-            <section class="container" id="whoweare">
-                <img src="image/mainfraud.jpeg" >
-                <div class="text-block">
+            <div class="container">
+                <hgroup class="text-block">
                     <h1 id="#whoweare">State-of-the-Art AI to put an end to check fraud</h1>
                     <p class="content">We provide cutting edge AI models to solve long-standing problems in financial <br/><br/>services, such as signature and check stock analysis affordably and at scale</p>
-                </div>
-            </section>
-            <section>
+                </hgroup>
+            </div>
+            <section class="customized">
                 <div class="left"> 
-                    <img src="image/workflow.png" />    
+                    <img src="image/workflow.png">    
                 </div>
                 <div id="whatwedo">
                     <h3>AI for check images</h3>
                         <p class="greytext" style="text-align: center;">AI performs all the analysis required to accurately outsort most check fraud schemes.</p>
-                        <div class="line"></div>
+                        <div class="line" id="hide"></div>
                             <div class="checkbox">
                                 <img src="image/checked.svg" alt="checked-btn" class="checked-svg">
                                 <span class="list">Detailed check stock analysis</span>
@@ -54,17 +63,16 @@
                             <div class="checkbox">
                                 <img src="image/checked.svg" alt="checked-btn" class="checked-svg">     
                                 <span class="list">Handwritten text extraction</span>
-                                <div class="line"></div>
-                                <p class="greytext" style="text-align: center;">Odita finally delivers on the promise of AI for check analysis.</p> 
+                                <div class="line" id="hide"></div>
+                                <p class="gridtxt" style="text-align: center;">Odita finally delivers on the promise of AI for check analysis.</p> 
                             </div>
                         </div> 
-                              
                 </div>
             </section>
-            <section id="ourperformance">
-                <div class="thirdrow">
+            <section class="customized">
+                <div id="ourperformance" class="thirdrow">
                     <h5>Fast and accurate</h5>
-                    <h2 class="thirdpar">Odita's advanced backend engineering <br> ensures our solutions are fast and cheap</h2>
+                    <h2>Odita's advanced backend engineering <br> ensures our solutions are fast and cheap</h2>
                     <p class="greytext">We manage the backend infrastructure of cloud GPUs and TPUs to provide you with a simple API service that consistently produces the analytics you require within tight SLAs <br><br> We allow you to optimize your cost by providing both batch and online processing</p>
                 </div>
                 <div id="ourperformance" class="thirdrow">
@@ -72,33 +80,33 @@
                         <div class="column">
                             <img src="image/toggle-single.svg" alt="toggle-icon" class="svg-icon">
                             <h6>99.99% uptime</h6>
-                            <p class="greytext">Zero maintenance downtime</p>
+                            <p class="gridtxt">Zero maintenance downtime</p>
                         </div>
                         <div class="column">
                             <img src="image/timer-icon.svg" alt="timer-symbol" class="svg-icon"> 
                             <h6>100ms SLA</h6>
-                            <p class="greytext">Real-time or batch processing with tight SLAs</p>
+                            <p class="gridtxt">Real-time or batch processing with tight SLAs</p>
                         </div>
                         <div class="column">
                             <img src="image/target-svg.svg" alt="target-symbol" class="svg-icon">
                             <h6>Accurate models</h6>
-                            <p class="greytext">Close to human accuracy with continuous improvements</p>
+                            <p class="gridtxt">Close to human accuracy with continuous improvements</p>
                         </div>
                         <div class="column">
                             <img src="image/bar-chart.svg" alt="bar-chart" class="svg-icon">
                             <h6>Cost optimized</h6>
-                            <p class="greytext">Choose the best workflow for your use case</p>
+                            <p class="gridtxt">Choose the best workflow for your use case</p>
                         </div>
                 </div>
             </section>
-            <section class="forthrow">
+            <section class="forthrow" id="mobileview"> 
                 <div id="contactus">
                     <h3 style="margin-left: 0px;">Ready to talk?</h3>
-                    <p class="greytext">Contact our experts about your use case</p>
+                    <p class="gridtext">Contact our experts about your use case</p>
                     <a href="mailto:contact@odita.ai" class="btn">Send us an email</a>
                 </div>
             </section>
-            <section>
+            <section class="lastrow">
                 <img src="image/bottonpic.jpg">
             </section>
         </main>
