--- a/index.html
+++ b/index.html
@@ -6,114 +6,145 @@
         <title>ODita, Inc.</title>
         <link rel="icon" type="images/x-icon" href="image/logo.png" />
        
-        <!-- Meta SEO -->
+        <!--- Meta SEO --->
         <meta name="title" content="Odita, Inc.">
         <meta name="description" content="State-of-the-art fraud prevention for check fraud.">
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
         <link rel="stylesheet" href="style.css">
-            
     </head>
     <body>
-        <header>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" src="images/logo.png">
+            </div>
             <nav class="main_nav">
-                <ul>
-                    <li class="list_item"><a href="#home"><img alt="logo" src="image/logo.png"></a></li>
+                <ul class="nav-bar">
                     <li class="list_item"><a href="#whoweare" class="li_nav">Who We Are </a></li> 
                     <li class="list_item"><a href="#whatwedo" class="li_nav">What We Do </a></li>               
                     <li class="list_item"><a href="#ourperformance" class="li_nav">Our Performance </a></li>
-                    <li class="list_item"><a href="#contactus" class="li_nav">Contact Us</a></li>
+                    <li class="list_item"><a href="#contact-us" class="li_nav">Contact Us</a></li>
                 </ul>
             </nav>
-            <button id="hamburger-menu">
-                <nav id="sidebar-menu">
-                    <ul> 
-                        <li><a href="#">Who We Are</a></li>
-                        <li><a href="#">What We Do</a></li>
-                        <li><a href="#">Our Performance</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </nav>
-            </button>    
+            <button class="hamburger" id="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <nav id="sidebar-menu">
+                <ul id="menu-list">
+                    <li><a href="#whoweare">Home</a></li>
+                    <li><a href="#whatwedo">About</a></li>
+                    <li><a href="#ourperformance">Services</a></li>
+                    <li><a href="#contact-us">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-            <div class="container">
+            <div class="background-container" id="whoweare">
                 <hgroup class="text-block">
-                    <h1 id="#whoweare">State-of-the-Art AI to put an end to check fraud</h1>
-                    <p class="content">We provide cutting edge AI models to solve long-standing problems in financial <br/><br/>services, such as signature and check stock analysis affordably and at scale</p>
+                    <h1 class="hgroup-heading">State-of-the-Art AI to put an end to check fraud</h1>
+                    <p class="hgroup-p">We provide cutting edge AI models to solve long-standing problems in financial <br/><br/>services, such as signature and check stock analysis affordably and at scale</p>
                 </hgroup>
             </div>
-            <section class="customized">
-                <div class="left"> 
-                    <img src="image/workflow.png">    
+            <div class="first-row" id="whatwedo">
+                <div class="checks-pic-container"> 
+                    <img src="images/workflow.png">    
                 </div>
-                <div id="whatwedo">
-                    <h3>AI for check images</h3>
-                        <p class="greytext" style="text-align: center;">AI performs all the analysis required to accurately outsort most check fraud schemes.</p>
-                        <div class="line" id="hide"></div>
-                            <div class="checkbox">
-                                <img src="image/checked.svg" alt="checked-btn" class="checked-svg">
-                                <span class="list">Detailed check stock analysis</span>
-                            </div>
-                            <div class="checkbox">
-                                <img src="image/checked.svg" alt="checked-btn" class="checked-svg"> 
-                                <span class="list">Signature comparison</span>
-                            </div>
-                            <div class="checkbox">
-                                <img src="image/checked.svg" alt="checked-btn" class="checked-svg">     
-                                <span class="list">Handwritten text extraction</span>
-                                <div class="line" id="hide"></div>
-                                <p class="gridtxt" style="text-align: center;">Odita finally delivers on the promise of AI for check analysis.</p> 
-                            </div>
+                <div class="check-box-container">
+                    <div class="top-text">
+                        <h3 class="container-heading">AI for check images</h3>
+                        <p class="container-p">AI performs all the analysis required to accurately outsort most check fraud schemes.</p>
+                    </div>
+                    <div class="svg-text-group">
+                        <div class="checkbox">
+                            <img src="images/checked.svg" alt="checked-btn" class="checked-svg">
+                            <span class="list">Detailed check stock analysis</span>
+                        </div>
+                        <div class="checkbox">
+                            <img src="images/checked.svg" alt="checked-btn" class="checked-svg"> 
+                            <span class="list">Signature comparison</span>
+                        </div>
+                        <div class="checkbox">
+                            <img src="images/checked.svg" alt="checked-btn" class="checked-svg">     
+                            <span class="list">Handwritten text extraction</span>
                         </div> 
+                    </div>
+                    <div class="line"></div>
+                    <div class="bottom-text">
+                        <p class="container-p">Odita finally delivers on the promise of AI for check analysis.</p>
+                    </div>
+                </div> 
+            </div>
+            <div class="second-row" id="ourperformance" >
+                <div class="second-row-text">
+                    <h5 class="secondrow-heading-large">Fast and accurate</h5>
+                    <h2 class="secondrow-heading-small">Odita's advanced backend engineering,<br> ensures our solutions are fast and cheap</h2>
+                    <p class="secondrow-p">We manage the backend infrastructure of cloud GPUs and TPUs to provide you with a simple API service that consistently produces the analytics you require within tight SLAs. We allow you to optimize your cost by providing both batch and online processing.</p>
                 </div>
-            </section>
-            <section class="customized">
-                <div id="ourperformance" class="thirdrow">
-                    <h5>Fast and accurate</h5>
-                    <h2>Odita's advanced backend engineering <br> ensures our solutions are fast and cheap</h2>
-                    <p class="greytext">We manage the backend infrastructure of cloud GPUs and TPUs to provide you with a simple API service that consistently produces the analytics you require within tight SLAs <br><br> We allow you to optimize your cost by providing both batch and online processing</p>
-                </div>
-                <div id="ourperformance" class="thirdrow">
+                <!-- grid container -->
+                <div class="grid-container">
                     <div class="row">
                         <div class="column">
-                            <img src="image/toggle-single.svg" alt="toggle-icon" class="svg-icon">
-                            <h6>99.99% uptime</h6>
-                            <p class="gridtxt">Zero maintenance downtime</p>
+                            <div class="toggle-icon">
+                                <img src="images/toggle-single.svg" alt="toggle-icon" class="svg-icon">
+                            </div>
+                            <div class="text-group">
+                                <h6 class="grid-heading">99.99% uptime</h6>
+                                <p class="grid-txt-toggle">Zero maintenance downtime</p>
+                            </div>
                         </div>
                         <div class="column">
-                            <img src="image/timer-icon.svg" alt="timer-symbol" class="svg-icon"> 
-                            <h6>100ms SLA</h6>
-                            <p class="gridtxt">Real-time or batch processing with tight SLAs</p>
+                            <div class="toggle-icon">
+                                <img src="images/timer-icon.svg" alt="timer-symbol" class="svg-icon"> 
+                            </div>
+                            <div class="text-group">
+                                <h6 class="grid-heading">100ms SLA</h6>
+                                <p class="grid-txt-toggle">Real-time or batch processing with tight SLAs</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row"> 
+                        <div class="column">
+                            <div class="toggle-icon">
+                                <img src="images/target-svg.svg" alt="target-symbol" class="svg-icon">
+                            </div>
+                            <div class="text-group">
+                                <h6 class="grid-heading">Accurate models</h6>
+                                <p class="grid-txt-toggle">Close to human accuracy with continuous improvements</p>
+                            </div>
                         </div>
                         <div class="column">
-                            <img src="image/target-svg.svg" alt="target-symbol" class="svg-icon">
-                            <h6>Accurate models</h6>
-                            <p class="gridtxt">Close to human accuracy with continuous improvements</p>
-                        </div>
-                        <div class="column">
-                            <img src="image/bar-chart.svg" alt="bar-chart" class="svg-icon">
-                            <h6>Cost optimized</h6>
-                            <p class="gridtxt">Choose the best workflow for your use case</p>
-                        </div>
+                            <div class="toggle-icon">
+                                <img src="images/bar-chart.svg" alt="bar-chart" class="svg-icon">
+                            </div>
+                            <div class="text-group">
+                                <h6 class="grid-heading">Cost optimized</h6>
+                                <p class="grid-txt-toggle">Choose the best workflow for your use case</p>
+                            </div>
+                        </div>    
+                    </div>
                 </div>
-            </section>
-            <section class="forthrow" id="mobileview"> 
-                <div id="contactus">
-                    <h3 style="margin-left: 0px;">Ready to talk?</h3>
-                    <p class="gridtext">Contact our experts about your use case</p>
-                    <a href="mailto:contact@odita.ai" class="btn">Send us an email</a>
+            </div>
+            <div class="third-row" id="contact-us"> 
+                <div class="contact-us-text">
+                    <h3 class="contactus-heading">Ready to talk?</h3>
+                    <p class="contactus-p">Contact our experts about your use case</p>
                 </div>
-            </section>
-            <section class="lastrow">
-                <img src="image/bottonpic.jpg">
-            </section>
+                <div class="btn">
+                    <a href="mailto:contact@odita.ai" class="btn-text">Send us an email</a>
+                </div>
+            </div>
+            <div class="forth-row-img">
+                <img src="images/bottonpic.jpg">
+            </div>
         </main>
         <footer>
-             <div>
+             <div class="footer">
                 <p> 2023 Odita Inc. All Rights Reserved.</p>
             </div> 
         </footer>
+        <script src="script.js">
     </body>
 </html>
